# webJeopardy

./: README.md  pyproject.toml
webjeopardy/: __init__.py  jeopardy.py
webjeopardy/templates/: hello.html  quotes.html
