[tool.poetry]
name = "filmtrumps"
version = "0.1.0"
description = ""
authors = ["psycb9 <psycb9@exmail.nottingham>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
html2text = "^2020.1.16"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
